Add support to disable host users for container to avoid security exploitation

--- a/provider/k8s/template/app/service.yml.tmpl
+++ b/provider/k8s/template/app/service.yml.tmpl
@@ -108,6 +108,9 @@ spec:
         {{ end }}
       {{ end }}
       {{ end }}
+      {{ if .Service.DisableHostUsers }}
+      hostUsers: false
+      {{ end }}
       {{ if or (.Resolver) (gt .Service.DnsConfig.Ndots 0) }}
       dnsPolicy: "None"
       dnsConfig:
