--- a/provider/k8s/template/app/timer.yml.tmpl
+++ b/provider/k8s/template/app/timer.yml.tmpl
@@ -74,6 +74,9 @@ spec:
             {{ end }}
           {{ end }}
           {{ end }}
+          {{ if .Service.DisableHostUsers }}
+          hostUsers: false
+          {{ end }}
           {{ if or (.Resolver) (gt .Service.DnsConfig.Ndots 0) }}
           dnsPolicy: "None"
           dnsConfig:
